2003-08-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* refcard/Makefile.in (refcard-a4.pdf, refcard-legal.pdf,
	refcard-letter.pdf): New targets.
	(FORMATTED): Add them to the list.
	* refcard/refcard.tex: Optionally set pdf paper size parameters.

2003-08-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/Makefile.in (octave_toc.html): Add "-I ." to texinfo
	command line args.

2003-07-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* faq/Makefile.in (FORMATTED): Include all Octave-FAQ_*.html files
	here, not just the toc.

2003-05-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/Makefile.in, doc/liboctave/Makefile.in: Handle DESTDIR.

2003-02-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/Makefile.in (MAN_BASE): Add octave-config.1 to the list.

2003-02-19  Dirk Eddelbuettel <edd@debian.org>

	* octave-config.1: New file.

2003-01-11  Paul Kienzle <pkienzle@users.sf.net>

	* interpreter/Makefile.in (munge-texi$(BUILD_EXEEXT)): Pass
	$(BUILD_CXXFLAGS) and $(BUILD_LDFLAGS) to compiler.
	(%.o : %.cc): Delete pattern rule.

2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/munge-texi.cc: Define __USE_STD_IOSTREAM if using
	Compaq C++.

2002-12-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/Makefile.in (%.o : %.c): No longer need
	-DNO_PRAGMA_INTERFACE_IMPLEMENTATION=1 compiler option.
	(munge-texi#(BUILD_EXEEXT)): Likewise.
	Don't link to Map-s.o.

	* interpreter/Map-s.cc: Delete.
	* interpreter/Makefile.in (DISTFILES): Delete it from the list.
	(mostlyclean, clean): Don't delete Map-s.o.

	* interpreter/munge-texi.cc: Require working STL.

2002-11-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/Makefile.in (maintainer-clean): Depend on
	clean-texi, don't remove $(TEXINFO).

2002-11-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* interpreter/munge-texi.cc: Use STL map class by default, but
	make it easy to revert back to libg++-based Map class if that
	fails to work on some systems.
